[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,18 @@
 <html>
+    <head>
+        <title>Article one by subbu</title>
+        <meta name=viewport/>
+    </head>
+    <body>
+        <div>
+            <a href="/">MyHomr</a>
+        </div>
+        <hr>
+        <div>
+            <p>
+                This the content for first article
+            </p>
+        </div>
+        
+    </body>
 </html>
