--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Article one by subbu</title>
-        <meta name=viewport/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
     </head>
     <body>
         <div>
